# dat_extractor

./: Cargo.toml  README.md
examples/: alter_anim_speed.rs  bench_model.rs  extract_anim_file.rs  extract_ef_textures.rs  extract_fd.rs  extract_file.rs  extract_fx_anims.rs  extract_fx_mesh.rs  extract_textures.rs  fighter_data.rs  get_anim_map.rs  hitboxes.rs  icons.rs  list_files.rs  percents.rs  ps_trans.rs  replace_file.rs  test.rs  turnip_test.rs
src/: datold.rs  isoparser.rs  lib.rs
src/dat/: extract_anims.rs  extract_effects.rs  extract_mesh.rs  fighter_data.rs  hsd_accessors.rs  hsd_struct.rs  jobj.rs  mod.rs  textures.rs
src/repr/: enums.rs  mod.rs
