[package]
name = "dat_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
lazy_static = "1.4.0"
#utils = { path = "../utils" }
glam = "0.23.0"
slippi_situation_parser = { path = "../slippi_situation_parser" }

[dev-dependencies]
lodepng = "3.7"
