[package]
name = "dat_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
opt-level = 2

[dependencies]
lazy_static = "1.4.0"
#utils = { path = "../utils" }
glam = "0.24"
slp_parser = { path = "../slippi_situation_parser" }
ahash = "0.8.3"
bytemuck = "1.13"

[dev-dependencies]
lodepng = "3.7"
