[package]
name = "dat_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true
opt-level = 2

[dependencies]
glam = { version = "0.29", features = ["bytemuck"] }
slp_parser = { git = "https://github.com/AlexanderHarrison/slp_parser.git" }
ahash = "0.8"
bytemuck = { version = "1.18", features = ["extern_crate_alloc"] }
bumpalo = "3.16"

[dev-dependencies]
lodepng = "3.8"
